--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create
 
+spring.mustache.expose-request-attributes=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
